Add dynamic import plugin

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .footer {
-  background-color: #ccc;
+  background-color: rgb(173, 114, 114);
   font-size: $font-size;
   height: 70px;
   text-align: center;
