--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -13,9 +13,44 @@
   border: 1px solid #000;
   width: 25%;
   margin: 40px 30px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  padding: 20px;
+
+  div {
+    text-align: left;
+
+    ul {
+      padding: 0;
+
+      li {
+        margin: 5px 0;
+
+        strong {
+          margin: 0 3px;
+        }
+      }
+    }
+  }
+
+  .title {
+    font-size: 22px;
+  }
+
+  .task-list {
+    display: block;
+    text-align: left;
+  }
+
+  a {
+    color: #000;
+    font-size: 18px;
+    margin-top: 10px;
+    display: block;
+  }
+
+  button {
+    font-size: 16px;
+    padding: 5px;
+  }
 }
 
 .main-content {
