--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,6 +1,6 @@
 @import '../../variables.scss';
 .main {
-  height: 500px;
+  min-height: 500px;
   background-color: $main_color;
   border: $global_border;
   margin: 20px 0;
@@ -58,4 +58,9 @@
   background-color: $second_color;
   margin: 80px 20px 40px;
   border: 1px solid #000;
+  padding: 10px;
+
+  ul {
+    text-align: left;
+  }
 }
