--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -60,7 +60,23 @@
   border: 1px solid #000;
   padding: 10px;
 
-  ul {
-    text-align: left;
+  .user-post {
+    display: flex;
+  }
+
+  .user-list {
+    width: 25%;
+
+    li {
+      cursor: pointer;
+
+      &:hover {
+        color: #e7e7e7;
+      }
+    }
+  }
+
+  .post-list {
+    width: 75%;
   }
 }
