--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -57,4 +57,25 @@
   background-color: $second_color;
   margin: 80px 20px 40px;
   border: 1px solid #000;
+  padding: 10px;
+
+  .user-post {
+    display: flex;
+  }
+
+  .user-list {
+    width: 25%;
+
+    li {
+      cursor: pointer;
+
+      &:hover {
+        color: #e7e7e7;
+      }
+    }
+  }
+
+  .post-list {
+    width: 75%;
+  }
 }
