--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -1,4 +1,5 @@
-.nav-tabs {
+.nav-tab {
+
   ul {
     margin: 0;
     padding: 0;
@@ -8,6 +9,15 @@
     a {
       padding: 10px;
       background-color: #eee;
+      text-decoration: none;
+      border: 1px solid #000;
+      font-size: 18px;
+    }
+
+    li.active {
+      a {
+        background-color: #cfe2f3;
+      }
     }
   }
 }
