--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -5,4 +5,8 @@
   border: $global_border;
   text-align: center;
   padding: 20px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  right: 0;
 }
