--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -1,10 +1,21 @@
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border: 26px dotted #ff574d;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
   animation: spin 2s linear infinite;
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.6);
 }
 
 @keyframes spin {
