--- a/src/app.scss
+++ b/src/app.scss
@@ -7,3 +7,17 @@ body {
     font-size: $font_size;
   }
 }
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+#app {
+  position: relative;
+  min-height: 100vh;
+}
+
+ul {
+  list-style: none;
+}
