--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -41,3 +41,29 @@
     margin-top: 30px;
   }
 }
+
+.product-card {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0px 50px 50px 0;
+
+  .controls {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  img {
+    max-width: 250px;
+  }
+
+  .product-box {
+    border: 2px solid;
+  }
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+}
