--- a/src/app.scss
+++ b/src/app.scss
@@ -1,10 +1,19 @@
+@import url(https://fonts.googleapis.com/css?family=Arvo:400,700);
 @import './variables.scss';
+
 body {
   margin: 0;
   background-color: #d9d9d9;
+  font-family: Arvo;
+  font-weight: 400;
 
   h4 {
     font-size: $font_size;
+  }
+
+  a {
+    text-decoration: none;
+    color: #79c7c9;
   }
 }
 
